[gd_scene load_steps=25 format=2]

[ext_resource path="res://ui/fonts/roboto_black_50.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/fonts/roboto_black_60.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/assets/src/gradients/item_gradient.png" type="Texture" id=3]
[ext_resource path="res://ui/assets/src/gradients/long_item_gradient.png" type="Texture" id=4]
[ext_resource path="res://ui/fonts/36/roboto_black_36.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/assets/src/banners/title_banner.png" type="Texture" id=6]
[ext_resource path="res://ui/assets/src/Logos/logo_credits.png" type="Texture" id=7]
[ext_resource path="res://ui/assets/src/Logos/logo_rules.png" type="Texture" id=8]
[ext_resource path="res://scripts/view/menu/SettingsContent.gd" type="Script" id=9]
[ext_resource path="res://ui/themes/complots_mobile_theme.tres" type="Theme" id=10]
[ext_resource path="res://ui/assets/src/banners/item_banner.png" type="Texture" id=11]
[ext_resource path="res://ui/assets/src/Logos/logo_save.png" type="Texture" id=12]
[ext_resource path="res://ui/animations/menu/settings/SettingsContent_Hide.tres" type="Animation" id=13]
[ext_resource path="res://ui/animations/menu/settings/SettingsContent_Show.tres" type="Animation" id=14]
[ext_resource path="res://scripts/view/LocalizedText.gd" type="Script" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.439216, 0.435294, 0.827451, 0.25098 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.439216, 0.435294, 0.827451, 0.25098 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=9]
draw_center = false
border_width_bottom = 5
border_color = Color( 0.968627, 0.945098, 0.890196, 1 )

[node name="SettingsContent" type="VBoxContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -652.0
margin_bottom = 652.0
grow_horizontal = 2
rect_clip_content = true
theme = ExtResource( 10 )
custom_constants/separation = 40
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageTitle" type="TextureRect" parent="."]
margin_right = 1080.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
texture = ExtResource( 6 )

[node name="Title" type="Label" parent="PageTitle"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 42.0
margin_top = -50.0
margin_right = 383.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalizedText" type="Node" parent="PageTitle/Title"]
script = ExtResource( 15 )
text_key = "menu.settings"

[node name="Button" type="Button" parent="PageTitle"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -36.5
margin_bottom = 36.5
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalizedText" type="Node" parent="PageTitle/Button"]
script = ExtResource( 15 )
text_key = "menu.back"

[node name="Grid" type="GridContainer" parent="."]
margin_top = 140.0
margin_right = 1080.0
margin_bottom = 1320.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20

[node name="Top" type="GridContainer" parent="Grid"]
margin_right = 1060.0
margin_bottom = 780.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="LeftColumn" type="VBoxContainer" parent="Grid/Top"]
margin_right = 520.0
margin_bottom = 780.0

[node name="Volume" type="TextureRect" parent="Grid/Top/LeftColumn"]
margin_right = 520.0
margin_bottom = 780.0
rect_min_size = Vector2( 520, 780 )
mouse_filter = 0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="Content" type="VBoxContainer" parent="Grid/Top/LeftColumn/Volume"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Control" parent="Grid/Top/LeftColumn/Volume/Content"]
margin_right = 520.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2

[node name="ItemTitle" type="TextureRect" parent="Grid/Top/LeftColumn/Volume/Content/Header"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_right = 520.0
mouse_filter = 2
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Grid/Top/LeftColumn/Volume/Content/Header/ItemTitle"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -21.5
margin_right = 216.0
margin_bottom = 21.5
custom_fonts/font = ExtResource( 5 )
text = "Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalizedText" type="Node" parent="Grid/Top/LeftColumn/Volume/Content/Header/ItemTitle/Title"]
script = ExtResource( 15 )
text_key = "menu.volume"

[node name="ContentContainer" type="VBoxContainer" parent="Grid/Top/LeftColumn/Volume/Content"]
margin_top = 84.0
margin_right = 520.0
margin_bottom = 780.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Master" type="MarginContainer" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer"]
margin_right = 520.0
margin_bottom = 154.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20

[node name="Container" type="VBoxContainer" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Master"]
margin_left = 40.0
margin_top = 40.0
margin_right = 480.0
margin_bottom = 134.0
custom_constants/separation = 10

[node name="Text" type="HBoxContainer" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Master/Container"]
margin_right = 440.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Master/Container/Text"]
margin_right = 218.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Master"
valign = 1

[node name="LocalizedText" type="Node" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Master/Container/Text/Label"]
script = ExtResource( 15 )
text_key = "menu.settings.master"

[node name="Volume" type="Label" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Master/Container/Text"]
margin_left = 222.0
margin_right = 440.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1

[node name="HSlider" type="HSlider" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Master/Container"]
margin_top = 53.0
margin_right = 440.0
margin_bottom = 94.0

[node name="Music" type="MarginContainer" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer"]
margin_top = 158.0
margin_right = 520.0
margin_bottom = 292.0
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20

[node name="Container" type="VBoxContainer" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Music"]
margin_left = 40.0
margin_top = 20.0
margin_right = 480.0
margin_bottom = 114.0
custom_constants/separation = 10

[node name="Text" type="HBoxContainer" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Music/Container"]
margin_right = 440.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Music/Container/Text"]
margin_right = 218.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Music"
valign = 1

[node name="LocalizedText" type="Node" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Music/Container/Text/Label"]
script = ExtResource( 15 )
text_key = "menu.settings.music"

[node name="Volume" type="Label" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Music/Container/Text"]
margin_left = 222.0
margin_right = 440.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1

[node name="HSlider" type="HSlider" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/Music/Container"]
margin_top = 53.0
margin_right = 440.0
margin_bottom = 94.0

[node name="SFX" type="MarginContainer" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer"]
margin_top = 296.0
margin_right = 520.0
margin_bottom = 430.0
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20

[node name="Container" type="VBoxContainer" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/SFX"]
margin_left = 40.0
margin_top = 20.0
margin_right = 480.0
margin_bottom = 114.0
custom_constants/separation = 10

[node name="Text" type="HBoxContainer" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/SFX/Container"]
margin_right = 440.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/SFX/Container/Text"]
margin_right = 218.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Sounds"
valign = 1

[node name="LocalizedText" type="Node" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/SFX/Container/Text/Label"]
script = ExtResource( 15 )
text_key = "menu.settings.sounds"

[node name="Volume" type="Label" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/SFX/Container/Text"]
margin_left = 222.0
margin_right = 440.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
valign = 1

[node name="HSlider" type="HSlider" parent="Grid/Top/LeftColumn/Volume/Content/ContentContainer/SFX/Container"]
margin_top = 53.0
margin_right = 440.0
margin_bottom = 94.0

[node name="CenterColumn" type="VBoxContainer" parent="Grid/Top"]
margin_left = 540.0
margin_right = 1060.0
margin_bottom = 780.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rules" type="TextureRect" parent="Grid/Top/CenterColumn"]
margin_right = 520.0
margin_bottom = 380.0
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Grid/Top/CenterColumn/Rules"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="Grid/Top/CenterColumn/Rules"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Header" type="Control" parent="Grid/Top/CenterColumn/Rules/Content"]
margin_right = 520.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2

[node name="ItemTitle" type="TextureRect" parent="Grid/Top/CenterColumn/Rules/Content/Header"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_right = 520.0
mouse_filter = 2
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Grid/Top/CenterColumn/Rules/Content/Header/ItemTitle"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -21.5
margin_right = 216.0
margin_bottom = 21.5
custom_fonts/font = ExtResource( 5 )
text = "Rules"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalizedText" type="Node" parent="Grid/Top/CenterColumn/Rules/Content/Header/ItemTitle/Title"]
script = ExtResource( 15 )
text_key = "menu.rules"

[node name="ImageContainer2" type="CenterContainer" parent="Grid/Top/CenterColumn/Rules/Content"]
margin_top = 84.0
margin_right = 520.0
margin_bottom = 380.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Image" type="TextureRect" parent="Grid/Top/CenterColumn/Rules/Content/ImageContainer2"]
margin_left = 128.0
margin_top = 6.0
margin_right = 392.0
margin_bottom = 290.0
mouse_filter = 2
texture = ExtResource( 8 )

[node name="Credits" type="TextureRect" parent="Grid/Top/CenterColumn"]
margin_top = 400.0
margin_right = 520.0
margin_bottom = 780.0
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Grid/Top/CenterColumn/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="Grid/Top/CenterColumn/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Header" type="Control" parent="Grid/Top/CenterColumn/Credits/Content"]
margin_right = 520.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2

[node name="ItemTitle" type="TextureRect" parent="Grid/Top/CenterColumn/Credits/Content/Header"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_right = 520.0
mouse_filter = 2
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Grid/Top/CenterColumn/Credits/Content/Header/ItemTitle"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -21.5
margin_right = 216.0
margin_bottom = 21.5
custom_fonts/font = ExtResource( 5 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalizedText" type="Node" parent="Grid/Top/CenterColumn/Credits/Content/Header/ItemTitle/Title"]
script = ExtResource( 15 )
text_key = "menu.credits"

[node name="ImageContainer2" type="CenterContainer" parent="Grid/Top/CenterColumn/Credits/Content"]
margin_top = 84.0
margin_right = 520.0
margin_bottom = 380.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Image" type="TextureRect" parent="Grid/Top/CenterColumn/Credits/Content/ImageContainer2"]
margin_left = 128.0
margin_top = 6.0
margin_right = 392.0
margin_bottom = 290.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="Bottom" type="GridContainer" parent="Grid"]
margin_top = 800.0
margin_right = 1060.0
margin_bottom = 1180.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="Language" type="TextureRect" parent="Grid/Bottom"]
margin_right = 520.0
margin_bottom = 380.0
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Grid/Bottom/Language"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="Grid/Bottom/Language"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Header" type="Control" parent="Grid/Bottom/Language/Content"]
margin_right = 520.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2

[node name="ItemTitle" type="TextureRect" parent="Grid/Bottom/Language/Content/Header"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_right = 520.0
mouse_filter = 2
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Grid/Bottom/Language/Content/Header/ItemTitle"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -21.5
margin_right = 216.0
margin_bottom = 21.5
custom_fonts/font = ExtResource( 5 )
text = "Language"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalizedText" type="Node" parent="Grid/Bottom/Language/Content/Header/ItemTitle/Title"]
script = ExtResource( 15 )
text_key = "menu.language"

[node name="ItemContainer" type="CenterContainer" parent="Grid/Bottom/Language/Content"]
margin_top = 84.0
margin_right = 520.0
margin_bottom = 380.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Grid/Bottom/Language/Content/ItemContainer"]
margin_left = 95.0
margin_top = 83.0
margin_right = 424.0
margin_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 130 )
custom_colors/font_color = Color( 0.439216, 0.435294, 0.827451, 1 )
text = "ENGLISH"
align = 1

[node name="Save" type="Control" parent="Grid/Bottom"]
margin_left = 540.0
margin_right = 1060.0
margin_bottom = 380.0
rect_min_size = Vector2( 520, 380 )
mouse_filter = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Button" type="Button" parent="Grid/Bottom/Save"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Grid/Bottom/Save/Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveText" type="Button" parent="Grid/Bottom/Save"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -73.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 1 )
text = "Save"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalizedText" type="Node" parent="Grid/Bottom/Save/SaveText"]
script = ExtResource( 15 )
text_key = "menu.save"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = ExtResource( 13 )
anims/show = ExtResource( 14 )
